# zania-qa-bot

./: .gitignore  Dockerfile  Makefile  README.md  example_test.json  pyproject.toml  sample.json
.github/workflows/: ci.yml
app/: ingestion.py  logging_mw.py  main.py  rag.py  schemas.py  settings.py  utils.py
tests/: test_api_integration.py  test_health.py  test_ingestion.py  test_utils.py
zania_qa_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
