[project]
name = "zania-qa-bot"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "python-multipart>=0.0.9",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "langchain>=0.2.0",
  "langchain-openai>=0.1.7",
  "langchain-community>=0.2.0",
  "langchain-text-splitters>=0.2.0",
  "chromadb>=0.5.0",
  "pypdf>=4.0.0",
  "tenacity>=8.2.3",
  "filelock>=3.13.1",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
